Fixed nexus version to 3.76, change from alpine jdk image to deal with memory issue